# Palmer

./: .vsconfig  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  vcpkg.json
.ci/: azure.yml  build.ps1
.github/workflows/: build.ps1  main.yml
cmake/: FindGLEW.cmake  FindLIBPNG.cmake  FindZLib.cmake
misc/: version.rc.in
src/: CMakeLists.txt  export.c  export.cpp  export.h  file.c  file.cpp  file.h  gl.c  gl.cpp  import.c  import.cpp  import.h  layers.c  layers.cpp  layers.h  palettes.c  palettes.cpp  palettes.h  palmer.c  palmer.cpp  palmer.h  palmer_gl.h  section.c  section.cpp  section.h  util_menu.c  util_menu.cpp
